# fizyka-projekt

./: .gitignore  Cargo.toml  README.md  index.html  ladunki_ruchome.txt  ladunki_stacjonarne.txt  output.txt  ładunki.csv  ładunki.txt  ładunki_ruchome.csv
src/: cellgrid.rs  main.rs  movable_charge.rs  toggle.rs
src/lib/: helpers.rs  mod.rs
