[package]
name = "fizyka-projekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
egui = "0.19.0"
egui-macroquad = "0.12.0"
macroquad = "0.3.25"
rand = "0.8.5"
rand_chacha = "0.3.1"
